# Goliath

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
back/: scene.hpp
editor/: CMakeLists.txt  default_layout.ini  error_stack.cpp  error_stack.hpp  exvars.cpp  exvars.hpp  game.cpp  game.hpp  gltf.cpp  gltf.hpp  init_menu.cpp  init_menu.hpp  layout.cpp  layout.hpp  main.cpp  models.cpp  models.hpp  project.cpp  project.hpp  scene.cpp  scene.hpp  state.cpp  state.hpp  textures.cpp  textures.hpp  ui.cpp  ui.hpp  util.cpp  util.hpp
goiview/: CMakeLists.txt  main.cpp
goiview/shaders/: frag.glsl  vert.glsl
shaders/: build.ps1  build.sh  frag_id.glsl  fragment.glsl  mat_count.glsl  mesh_fragment.glsl  model_fragment.glsl  model_vertex.glsl  offsets.glsl  pbr.glsl  postprocessing.glsl  scene_fragment.glsl  scene_vertex.glsl  used_mat.glsl  vertex.glsl
shaders/compute/: culling.glsl  flatten_draw.glsl  frag_id.glsl  fragment_id.glsl  hit_detection.glsl  mat_count.glsl  offsets.glsl  pbr.glsl  postprocessing.glsl
shaders/fragment/: grid.glsl  mesh_fragment.glsl  visbuffer_raster_fragment.glsl
shaders/vertex/: fullscreen_triangle.glsl  model_vertex.glsl  scene_vertex.glsl  visbuffer_raster_vertex.glsl
src/: CMakeLists.txt  assets.cpp  buffer.cpp  camera.cpp  compute.cpp  culling.cpp  culling.spv  dependency_graph.cpp  descriptor_pool.cpp  descriptor_pool_.hpp  dyn_module.cpp  engine.cpp  engine_.hpp  engine_demo.cpp  errors.cpp  event.cpp  event_.hpp  exvar.cpp  flatten_draw.spv  fragment_id.spv  fs.cpp  game_interface.cpp  game_interface2.cpp  gltf.cpp  gpu_group.cpp  imgui.cpp  imgui_.hpp  main.cpp  material.cpp  material_count.spv  materials.cpp  materials_.hpp  model.cpp  models.cpp  models_.hpp  offsets.spv  rendering.cpp  rendering_.hpp  samplers.cpp  scene.cpp  (+18 more)
src/include/goliath/: assets.hpp  buffer.hpp  camera.hpp  collisions.hpp  compute.hpp  culling.hpp  dependency_graph.hpp  descriptor_pool.hpp  dyn_module.hpp  engine.hpp  errors.hpp  event.hpp  exvar.hpp  fs.hpp  game_interface.hpp  game_interface2.hpp  gltf.hpp  gpu_group.hpp  imgui.hpp  imgui_reflection.hpp  lights.hpp  material.hpp  materials.hpp  model.hpp  models.hpp  mspc_queue.hpp  push_constant.hpp  rendering.hpp  samplers.hpp  scene.hpp  scenes.hpp  synchronization.hpp  texture.hpp  texture_pool.hpp  texture_registry.hpp  texture_registry2.hpp  textures.hpp  thread_pool.hpp  transport.hpp  transport2.hpp  (+3 more)
